fix remaining overflow issues

--- a/src/styles/KeyboardLinear.css
+++ b/src/styles/KeyboardLinear.css
@@ -42,11 +42,9 @@
   background-color: var(--serenity-key-white);
 }
 
-
 .piano-key.white.selected {
   background-color: var(--serenity-key-white-selected0);
 }
-
  
 .piano-key.black {
   width: calc(100% / var(--bKeysPer2Octaves));
@@ -61,8 +59,7 @@
   padding-left: 2px;
   background-color: var(--serenity-key-black);
   color: var(--serenity-note-text-on-black);
-  font-size: 0.6em; 
-  /*font-weight: normal;*/
+  font-size: 0.8em; 
 }
 
 .piano-key.black.selected {
